--- a/docs/monitor.dox
+++ b/docs/monitor.dox
@@ -109,6 +109,10 @@ Video modes are represented as @ref GLFWvidmode structures.  You can get an
 array of the video modes supported by a monitor with @ref glfwGetVideoModes.
 See the reference documentation for the lifetime of the returned array.
 
+The resolution of a video mode is specified in
+[screen coordinates](@ref coordinate_systems), not pixels.  To retrieve the
+current resolution in pixels see [framebuffer size](@ref monitor_fbsize).
+
 @code
 int count;
 GLFWvidmode* modes = glfwGetVideoModes(monitor, &count);
@@ -121,25 +125,34 @@ reference documentation for the lifetime of the returned pointer.
 const GLFWvidmode* mode = glfwGetVideoMode(monitor);
 @endcode
 
-The resolution of a video mode is specified in
-[screen coordinates](@ref coordinate_systems), not pixels.
+
+@subsection monitor_fbsize Framebuffer size
+
+The current resolution, in pixels, of a monitor can be retrieved with @ref
+glfwGetMonitorFramebufferSize.  This can be different from the dimensions in the
+current video mode, which are in screen coordinates.
+
+@code
+int width, height;
+glfwGetMonitorFramebufferSize(monitor, &width, &height);
+@endcode
 
 
 @subsection monitor_size Physical size
 
 The physical size of a monitor in millimetres, or an estimation of it, can be
 retrieved with @ref glfwGetMonitorPhysicalSize.  This has no relation to its
-current _resolution_, i.e. the width and height of its current
-[video mode](@ref monitor_modes).
+current resolution measured in pixels or screen coordinates.
 
 @code
 int width_mm, height_mm;
 glfwGetMonitorPhysicalSize(monitor, &width_mm, &height_mm);
 @endcode
 
-While this can be used to calculate the raw DPI of a monitor, this is often not
-useful.  Instead use the [monitor content scale](@ref monitor_scale) and
-[window content scale](@ref window_scale) to scale your content.
+While this can be used together with the [framebuffer size](@ref monitor_fbsize)
+to calculate the raw DPI of a monitor, this is often less useful than the
+[monitor content scale](@ref monitor_scale) and
+[window content scale](@ref window_scale) for scaling your 2D content.
 
 
 @subsection monitor_scale Content scale
